[gd_scene load_steps=4 format=3 uid="uid://blgbuyj8ymtq3"]

[ext_resource type="Texture2D" uid="uid://cah1sec13u8n2" path="res://assets/Tiny Swords (Update 010)/Terrain/Water/Water.png" id="1_mi0ut"]
[ext_resource type="Script" path="res://Defeat/defeat.gd" id="1_n0ddj"]
[ext_resource type="AudioStream" uid="uid://7e8ocsbj4uny" path="res://assets/sound/music/NotJamMusicPack/Loopable/DragAndDreadTheme_Loopable.wav" id="3_gx30o"]

[node name="Defeat" type="Node2D"]
script = ExtResource("1_n0ddj")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.682353)
position = Vector2(527, 310)
scale = Vector2(21.5389, 10.8037)
texture = ExtResource("1_mi0ut")

[node name="Camera2D" type="Camera2D" parent="Sprite2D"]
position = Vector2(-1.11427, 0)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color(0.627451, 0.027451, 0.12549, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 150.0
offset_top = 154.0
offset_right = 890.0
offset_bottom = 455.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 216
text = "Defeat"

[node name="PlayAgain" type="Button" parent="."]
modulate = Color(0.627451, 0.027451, 0.12549, 1)
offset_left = 213.0
offset_top = 497.0
offset_right = 308.0
offset_bottom = 528.0
scale = Vector2(2.32364, 2.32364)
text = "Play Again?"

[node name="Quit" type="Button" parent="."]
modulate = Color(0.627451, 0.027451, 0.12549, 1)
offset_left = 527.0
offset_top = 498.0
offset_right = 622.0
offset_bottom = 529.0
scale = Vector2(2.32364, 2.32364)
text = "Quit"

[node name="DefeatMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_gx30o")
bus = &"Music"

[connection signal="pressed" from="PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
